--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
 
-<h1> Welcome to my programming portfolio </h1>
+<h1> Welcome To Derek's Programming Portfolio! </h1>
     </body>
 </html>
