--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Razza's Portfolio Website</title>
     </head>
     <body>
-
-<h1> Welcome To Derek's Programming Portfolio! </h1>
+<img src=”csc106_banner.jpg”>
+        <h1> Welcome To Derek's Programming Portfolio! </h1>
     </body>
 </html>
