--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>Razza's Portfolio Website</title>
     </head>
     <body>
-<img src=”csc106_banner.jpg”>
-        <h1> Welcome To Derek's Programming Portfolio! </h1>
+        <img> src=”csc106_banner.</jpg”>
+        
+<h1> Welcome To Derek's Programming Portfolio! </h1>
     </body>
 </html>
