--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     </head>
     <body>
       <img src="csc106_banner.jpg">  
-        <a href="home.png"> </a>
+<table>
+    <thead> 
+        <tr>
+            <th>img src="home.png"/th>
+        </tr>
+    </thead>
+      
+    <a href=""> </a>
 <h1> Welcome To Derek's Programming Portfolio! </h1>
     </body>
 </html>
