--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 <table>
     <thead> 
         <tr>
-            <th>img src="home.png"/th>
+            <th><a href="index.html"><img src="home.png"></a></th>
         </tr>
-    </thead>
-      
-    <a href=""> </a>
-<h1> Welcome To Derek's Programming Portfolio! </h1>
+    </thead> 
+</table>     
+   
+        <a href=""> </a>
+
+        <h1> Welcome To Derek's Programming Portfolio! </h1>
     </body>
 </html>
