--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <thead> 
         <tr>
             <th><a href="index.html"><img src="home.png"></a></th>
-        </tr>
+            <th><a href="index.html"><img src="javascripts.png"></a></th>            
+            <th><a href="index.html"><img src="apps.png"></a></th>
+            <th><a href="index.html"><img src="about.png"></a></th>      
+       </tr>
     </thead> 
 </table>     
    
