--- a/javascripts.html
+++ b/javascripts.html
@@ -1,1 +1,26 @@
-derek
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Razza's Portfolio Website</title>
+    </head>
+    <body>
+      <img src="csc106_banner.jpg">  
+<table>
+    <thead> 
+        <tr>
+            <th><a href="index.html"><img src="home.png"></a></th>
+            <th><a href="javascripts.html"><img src="javascripts.png"></a></th>            
+            <th><a href="apps.html"><img src="apps.png"></a></th>
+            <th><a href="about.html"><img src="about.png"></a></th>      
+       </tr>
+    </thead> 
+</table>     
+   
+        <a href=""> </a>
+
+        <h1> Welcome To Derek's Javascripts Portfolio! </h1>
+      <p>Welcome to my Javascripts Page. Here i will post all of my coding that i have come up with</p>
+      <p>I have not come up with any of my own coding yet,</p>
+    </body>
+</html>
