--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 
         <h1> Welcome To Derek's Programming Portfolio! </h1>
     </body>
-    <p>Welcome to my first ever website. My name is Derek Razza and I will use this website as a portfolio for some of my work that I have completed while taking computer scinece at the University of Rhode Island.</p>
+    <h2> <p>Welcome to my first ever website. My name is Derek Razza and I will use this website as a portfolio for some of my work that I have completed while taking computer scinece at the University of Rhode Island.</p>
     <p>Like I said, this is the first of hopefully many websites that i have created.</p>
     <p>This webnsite is composed of HTML programming language that I have learned about in a class that I am taking called Computer Science 106 (CSC 106).</p>
     <p>In this website, you will find my Javascripts that I have written, fun Apps that I have created, and a little bit about my self.</p>
-</html>
+    </h2>
+       </html>
