--- a/apps.html
+++ b/apps.html
@@ -19,7 +19,7 @@
    
         <a href=""> </a>
 
-        <h1> Welcome To Derek's Apps Portfolio! </h1>
+        <h1> Welcome To Derek's Apps Page! </h1>
       <h2><p>This page will contain any apps that I come up with in the future. At the Moment I have not created any apps yet, however one is in the making and will be out shortly so stay tuned!</p></h2>
    
           </body>
