--- a/javascripts.html
+++ b/javascripts.html
@@ -20,7 +20,7 @@
         <a href=""> </a>
 
         <h1> Welcome To Derek's Javascripts Page! </h1>
-      <h2><p>Welcome to my Javascripts Page. Here i will post all of my Javascript(s) that I have come up with.</p>
+      <h2><p>Welcome to my Javascripts Page. Here I will post all of my Javascript(s) that I have come up with.</p>
       <p>I have not come up with any of my own Javascript yet but I will be sure to post it here when I create some.</p></h2>
    
           </body>
