--- a/javascripts.html
+++ b/javascripts.html
@@ -23,5 +23,5 @@
       <h2><p>Welcome to my Javascripts Page. Here I will post all of my Javascript(s) that I have come up with.</p>
       <p>I have not come up with any of my own Javascript yet but I will be sure to post it here when I create some.</p></h2>
    
-          </body>
+    </body> Back to <a href="index.html"> home page </a>
 </html>
