--- a/apps.html
+++ b/apps.html
@@ -22,5 +22,5 @@
         <h1> Welcome To Derek's Apps Page! </h1>
       <h2><p>This page will contain any apps that I come up with in the future. At the Moment I have not created any apps yet, however one is in the making and will be out shortly so stay tuned!</p></h2>
    
-          </body>
+          </body> Back to <a href="index.html"> home page </a>
 </html>
