--- a/about.html
+++ b/about.html
@@ -24,5 +24,5 @@
       <p>Fun fact about myself, if you ask any of my freinds and family they will all tell you that I have a burning passion of cars and i love cars way too much. I love everything about cars, I love talking about them, working on them, driving them, racing them (on a track ofcourse).</p>
       <p>I also played baseball for 12 years of my life and love baseball but like with all things, you tend to get bored of it/them after a while. I also developed Tendonitis in my elbow which affected my throwing abolity and constantly makes my elbow crack, which hurts. I also love being outside and love the outdoors, whether its fishing, playing baseball, basketball, swimming, etc.</h2>
    
-          </body>
+          </body> Back to <a href="index.html"> home page </a>
 </html>
