--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Razza's Portfolio Website</title>
     </head>
     <body>
-      <img src="dereksbanner.jpg">  
+      <img src="DereksBanner For Web.jpg">  
 <table>
     <thead> 
         <tr>
