--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </head>
     <body>
       <img src="DereksBanner For Web.jpg">  
-<table>
+<style>
+    body {background color: rgb(Gray);}
+        <table>
     <thead> 
         <tr>
             <th><a href="index.html"><img src="home.png"></a></th>
@@ -26,4 +28,5 @@
     <p>This website is composed of HTML programming language that I have learned about in a class that I am taking called Computer Science 106 (CSC 106).</p>
     <p>In this website, you will find my Javascripts that I have written, fun Apps that I have created, and a little bit about myself.</p>
     </h2>
-       </html>
+</style>      
+    </html>
