--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Razza's Portfolio Website</title>
     </head>
     <body>
-      <img src="DereksBanner For Web.jpg">  
+      <img src="Dereksbanner.jpg.pdx">  
 <style>
     body {background color: rgb(Gray);}
         <table>
