--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <title>Razza's Portfolio Website</title>
     </head>
     <body>
-      <img src="Dereksbanner.jpg.pdx">  
-<style>
-    body {background color: rgb(Gray);}
+      <img src="DereksProgrammingBanner.jpg.jpg">  
+
+    
  <table>
     <thead> 
         <tr>
@@ -18,7 +18,9 @@
        </tr>
     </thead> 
  </table>     
-</style>    
+<style>
+    body {background color: rgb(DarkGray);}
+</style>
    
         <a href=""> </a>
 
