--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-   <Style>
+
     <head>
         <meta charset="utf-8">
         <title>Razza's Portfolio Website</title>
@@ -19,7 +19,7 @@
        </tr>
     </thead> 
  </table>     
-
+<style>
     body {background color: rgb(DarkGray);}
 
    
