--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </thead> 
  </table>     
 <style>
-    body {background color: rgb(DarkGray);}
+    body id={background color: rgb(DarkGray);}
 
    
         <a href=""> </a>
