--- a/about.html
+++ b/about.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8">
         <title>Razza's Portfolio Website</title>
     </head>
-    <body>
-      <img src="csc106_banner.jpg">  
+   <body bgcolor="DarkGray">
+     
+        <img src="DereksProgrammingBanner.jpg.jpg">  
 <table>
     <thead> 
         <tr>
