--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body bgcolor="DarkGray">
      
         <img src="DereksProgrammingBanner.jpg.jpg">  
-<table>
+        <img src="IMG_0237.JPG">
+   <table>
     <thead> 
         <tr>
             <th><a href="index.html"><img src="home.png"></a></th>
