--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <thead> 
         <tr>
             <th><a href="index.html"><img src="homebutton2.jpg"></a></th>
-            <th><a href="javascripts.html"><img src="javascripts.png"></a></th>            
-            <th><a href="apps.html"><img src="apps.png"></a></th>
-            <th><a href="about.html"><img src="about.png"></a></th>      
+            <th><a href="javascripts.html"><img src="javascripts2.jpg"></a></th>            
+            <th><a href="apps.html"><img src="apps2.jpg"></a></th>
+            <th><a href="about.html"><img src="about2.jpg"></a></th>      
        </tr>
     </thead> 
  </table>     
