--- a/about.html
+++ b/about.html
@@ -25,5 +25,10 @@
       <p>Fun fact about myself, if you ask any of my friends and family they will all tell you that I have a burning passion of cars and i love cars way too much. I love everything about cars, I love talking about them, working on them, driving them, racing them (on a track of course).</p>
       <p>I also played baseball for 12 years of my life and love baseball but like with all things, you tend to get bored of it/them after a while. I also developed Tendinitis in my elbow which affected my throwing ability and constantly makes my elbow crack, which hurts. I also love being outside and love the outdoors, whether its fishing, playing baseball, basketball, swimming, etc.</h2>
    
-          </body> Back to <a href="index.html"> home page </a>
+   <img src="urifampic.PNG">
+   <img src="Jetski.jpg"> 
+   <img src="Baseball2nd.JPG">   
+   <img src="Teampic.JPG">   
+    
+    </body> Back to <a href="index.html"> home page </a>
 </html>
