--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <title>Razza's Portfolio Website</title>
     </head>
-<body bgimg src="SUNSET.jpg">     
-        
+<body bgcolor="DarkGray">
+               
         <img src="DereksProgrammingBanner.jpg.jpg">  
 <table>
     <thead> 
