--- a/javascripts.html
+++ b/javascripts.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Razza's Portfolio Website</title>
-    </head>
+        <link rel="stylesheet" type="text/css" href="style.css">    </head>
 <body bgcolor="DarkGray">
      
         <img src="DereksProgrammingBanner.jpg.jpg">  
