--- a/javascripts.html
+++ b/javascripts.html
@@ -3,13 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Razza's Portfolio Website</title>
-        <link rel="stylesheet" type="text/css" href="style.css">    </head>
+        <link rel="stylesheet" type="text/css" href="style.css">    
+    </head>
 <body bgcolor="DarkGray">
      
         <img src="DereksProgrammingBanner.jpg.jpg">  
-<table>
+
+<table id="nav-table">
+
     <thead> 
-        <tr>
+    <tr>
             <th><a href="index.html"><img src="homebutton2.jpg"></a></th>
             <th><a href="javascripts.html"><img src="javascripts2.jpg"></a></th>            
             <th><a href="apps.html"><img src="apps2.jpg"></a></th>
