--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
         <h1> Welcome To Derek's Programming Portfolio! </h1>
     
     <h2> <p>Welcome to my first ever website. My name is Derek Razza and I will use this website as a portfolio for some of my work that I have completed while taking computer science at the University of Rhode Island.</p>
+       <div class="paragraph">
     <p>Like I said, this is the first of hopefully many websites that I have created.</p>
     <p>This website is composed of HTML programming language that I have learned about in a class that I am taking called Computer Science 106 (CSC 106).</p>
     <p>In this website, you will find my Javascripts that I have written, fun Apps that I have created, and a little bit about myself.</p>
     <p> Also, I love memes as you can tell! </p>
+       </div>
     </h2>  
  
   <img src="IMG_0237.JPG"> 
