--- a/javascripts.html
+++ b/javascripts.html
@@ -24,8 +24,12 @@
         <a href=""> </a>
 
         <h1> Welcome To Derek's Javascripts Page! </h1>
-      <h2><p>Welcome to my Javascripts Page. Here I will post all of my Javascript(s) that I have come up with.</p>
-      <p>I have not come up with any of my own Javascript yet but I will be sure to post it here when I create some.</p></h2>
+      <h2>
+         <div class="paragraph">
+      <p>Welcome to my Javascripts Page. Here I will post all of my Javascript(s) that I have come up with.</p>
+      <p>I have not come up with any of my own Javascript yet but I will be sure to post it here when I create some.</p>
+         </div>
+      </h2>
    
     </body> Back to <a href="index.html"> home page </a>
 </html>
