--- a/about.html
+++ b/about.html
@@ -27,7 +27,9 @@
             color: black;
         background-color: white; 
             }  
-            
+        h1 {
+            color: white;
+            }
         </style>
     
     </head>   
