--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
         h2 {
             color: black;
         background-color: white; 
+            text-length: 800px;
             }  
         h1 {
             color: white;
