--- a/javascripts.html
+++ b/javascripts.html
@@ -31,5 +31,13 @@
          </div>
       </h2>
    
+    <p><a href="https://www.khanacademy.org/computer-programming/razza_bitmoji/6256724200357888">Razza_bitmoji</a></p><script src="https://www.khanacademy.org/computer-programming/razza_bitmoji/6256724200357888/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+
+<p><a href="https://www.khanacademy.org/computer-programming/razza_dancingbitmoji/5919670929162240">Razza_DancingBitmoji</a></p><script src="https://www.khanacademy.org/computer-programming/razza_dancingbitmoji/5919670929162240/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+
+<p><a href="https://www.khanacademy.org/computer-programming/razza_racingbitmoji/6374059796037632">Razza_RacingBitmoji</a></p><script src="https://www.khanacademy.org/computer-programming/razza_racingbitmoji/6374059796037632/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+
+    
     </body> Back to <a href="index.html"> home page </a>
+
 </html>
