--- a/javascripts.html
+++ b/javascripts.html
@@ -31,13 +31,7 @@
          </div>
       </h2>
    
-    <p><a href="https://www.khanacademy.org/computer-programming/razza_bitmoji/6256724200357888">Razza_bitmoji</a></p><script src="https://www.khanacademy.org/computer-programming/razza_bitmoji/6256724200357888/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
-
-<p><a href="https://www.khanacademy.org/computer-programming/razza_dancingbitmoji/5919670929162240">Razza_DancingBitmoji</a></p><script src="https://www.khanacademy.org/computer-programming/razza_dancingbitmoji/5919670929162240/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
-
-<p><a href="https://www.khanacademy.org/computer-programming/razza_racingbitmoji/6374059796037632">Razza_RacingBitmoji</a></p><script src="https://www.khanacademy.org/computer-programming/razza_racingbitmoji/6374059796037632/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
-
-    
-    </body> Back to <a href="index.html"> home page </a>
+    <p><a href="https://www.khanacademy.org/computer-programming/spin-off-of-razza_dancingbitmojifun/5167611299725312">img src="DancingBitmoji.png"></a></p>
+        </body> Back to <a href="index.html"> home page </a>
 
 </html>
