--- a/javascripts.html
+++ b/javascripts.html
@@ -31,9 +31,9 @@
          </div>
       </h2>
    
-    <p><a href="https://www.khanacademy.org/computer-programming/spin-off-of-razza_dancingbitmojifun/5167611299725312">img src="DancingBitmoji.png"></a></p>
-    <p><a href="https://www.khanacademy.org/computer-programming/spinoff-razza_bitmojiresizing/5943713802715136">img src="QuadBitmoji.png"></a></p>
-    <p><a href="https://www.khanacademy.org/computer-programming/spin-off-of-razza_racingbitmojifun/6162855130529792">img src="Bitmojiracing spinoff.jpg"></a></p>    
+    <p><a href="https://www.khanacademy.org/computer-programming/spin-off-of-razza_dancingbitmojifun/5167611299725312"><img src="DancingBitmoji.png"></a></p>
+    <p><a href="https://www.khanacademy.org/computer-programming/spinoff-razza_bitmojiresizing/5943713802715136"><img src="QuadBitmoji.png"></a></p>
+    <p><a href="https://www.khanacademy.org/computer-programming/spin-off-of-razza_racingbitmojifun/6162855130529792"><img src="Bitmojiracing spinoff.jpg"></a></p>    
     </body> Back to <a href="index.html"> home page </a>
 
 </html>
