--- a/javascripts.html
+++ b/javascripts.html
@@ -34,6 +34,9 @@
     <p><a href="https://www.khanacademy.org/computer-programming/spin-off-of-razza_dancingbitmojifun/5167611299725312"><img src="DancingBitmoji.png"></a></p>
     <p><a href="https://www.khanacademy.org/computer-programming/spinoff-razza_bitmojiresizing/5943713802715136"><img src="QuadBitmoji.png"></a></p>
     <p><a href="https://www.khanacademy.org/computer-programming/spin-off-of-razza_racingbitmojifun/6162855130529792"><img src="Bitmojiracing spinoff.jpg"></a></p>    
-    </body> Back to <a href="index.html"> home page </a>
+    <p><a href="https://www.khanacademy.org/computer-programming/razza_follow/5946774086451200"><img src="BitmojiMoving.png"></a></p>    
+    <p><a href="https://www.khanacademy.org/computer-programming/razzas-bitmoji-quiz/6716225476067328"><img src="BitmojiQuiz.png"></a></p>    
+        
+        </body> Back to <a href="index.html"> home page </a>
 
 </html>
