--- a/javascripts.html
+++ b/javascripts.html
@@ -36,7 +36,8 @@
     <p><a href="https://www.khanacademy.org/computer-programming/spin-off-of-razza_racingbitmojifun/6162855130529792"><img src="Bitmojiracing spinoff.jpg"></a></p>    
     <p><a href="https://www.khanacademy.org/computer-programming/razza_follow/5946774086451200"><img src="BitmojiMoving.png"></a></p>    
     <p><a href="https://www.khanacademy.org/computer-programming/razzas-bitmoji-quiz/6716225476067328"><img src="BitmojiQuiz.png"></a></p>    
-        
+    <p><a href="https://www.khanacademy.org/computer-programming/razza_formatted_integers/5002036194541568"><img src ="Graph.png"></a></p>
+    <p><a href="https://www.khanacademy.org/computer-programming/razza_bitmoji_line/6059568849715200"><img src ="bitmoji line.png"></a></p>
         </body> Back to <a href="index.html"> home page </a>
 
 </html>
