--- a/javascripts.html
+++ b/javascripts.html
@@ -38,6 +38,8 @@
     <p><a href="https://www.khanacademy.org/computer-programming/razzas-bitmoji-quiz/6716225476067328"><img src="BitmojiQuiz.png"></a></p>    
     <p><a href="https://www.khanacademy.org/computer-programming/razza_formatted_integers/5002036194541568"><img src ="Graph.png"></a></p>
     <p><a href="https://www.khanacademy.org/computer-programming/razza_bitmoji_line/6059568849715200"><img src ="bitmoji line.png"></a></p>
-        </body> Back to <a href="index.html"> home page </a>
+    <P><a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-make-it-rain/4818376164081664"><img src ="dryBItmoji.png"></a></p> 
+    
+    </body> Back to <a href="index.html"> home page </a>
 
 </html>
