--- a/javascripts.html
+++ b/javascripts.html
@@ -3,23 +3,24 @@
     <head>
         <meta charset="utf-8">
         <title>Razza's Portfolio Website</title>
-        <link rel="stylesheet" type="text/css" href="style.css">    
+        <link rel="stylesheet" type="text/css" href="style.css">      
     </head>
 <body bgcolor="DarkGray">
      
         <img src="DereksProgrammingBanner.jpg.jpg">  
 
 <table id="nav-table">
-
+    
     <thead> 
     <tr>
             <th><a href="index.html"><img src="homebutton2.jpg"></a></th>
             <th><a href="javascripts.html"><img src="javascripts2.jpg"></a></th>            
             <th><a href="apps.html"><img src="apps2.jpg"></a></th>
-            <th><a href="about.html"><img src="about2.jpg"></a></th> 
-       </tr>
+            <th><a href="about.html"><img src="about2.jpg"></a></th>
+            <th><a href="FinalProject.html"><img src="FinalProjectButton.jpg"></a></th>
+      </tr>
     </thead> 
-</table>     
+ </table>    
    
         <a href=""> </a>
 
