--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <th><a href="index.html"><img src="homebutton2.jpg"></a></th>
             <th><a href="javascripts.html"><img src="javascripts2.jpg"></a></th>            
             <th><a href="apps.html"><img src="apps2.jpg"></a></th>
-            <th><a href="about.html"><img src="about2.jpg"></a></th>      
+            <th><a href="about.html"><img src="about2.jpg"></a></th>
+            <th><a href="FinalProject.html"><img src="FinalProjectButton.jpg"></a></th>
       </tr>
     </thead> 
  </table>     
