--- a/FinalProject.html
+++ b/FinalProject.html
@@ -38,4 +38,8 @@
         </div>
     </h2>  
   </body> Back to <a href="index.html"> home page </a>
+
+    <p><a href="https://youtu.be/wF066dRBMdM"><img src="Galaga.png"></a></p>
+    <p><a href="https://www.khanacademy.org/computer-programming/galaga/5286840327176192"><img src="Screen Shot 2019-12-17 at 5.01.16 PM.png"></a></p>
+
 </html>
