--- a/FinalProject.html
+++ b/FinalProject.html
@@ -40,6 +40,5 @@
   </body> Back to <a href="index.html"> home page </a>
 
     <p><a href="https://youtu.be/wF066dRBMdM"><img src="Galaga.png"></a></p>
-    <p><a href="https://www.khanacademy.org/computer-programming/galaga/5286840327176192"><img src="Screen Shot 2019-12-17 at 5.01.16 PM.png"></a></p>
-
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/wF066dRBMdM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </html>
